// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadMutator Base transition state should match snapshot 1`] = `
<Fragment>
  <button
    onClick={[Function]}
  >
    upload
  </button>
</Fragment>
`;

exports[`UploadMutator Error transition state should match snapshot 1`] = `
<Fragment>
  <button
    disabled={false}
    onClick={[Function]}
  >
    retry
  </button>
  <span
    className="upload-error"
  >
    Error while uploading: 
    something went wrong
  </span>
</Fragment>
`;

exports[`UploadMutator Pending transition state with \`uploadFile\` should match snapshot 1`] = `
<Fragment>
  <button
    disabled={true}
    onClick={[Function]}
  >
    uploading...
  </button>
  <progress
    id="file"
    max="100"
    value={0}
  >
    0
    % done
  </progress>
</Fragment>
`;

exports[`UploadMutator Pending transition state with Chunk should match snapshot 1`] = `
<Fragment>
  <button
    disabled={true}
    onClick={[Function]}
  >
    uploading...
  </button>
  <progress
    id="file"
    max="100"
    value={37}
  >
    37
    % done
  </progress>
</Fragment>
`;
